--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,26 @@ h1 {
     background-color: grey;
 }
 
+/* Images displayed in cards on the home [calculator] page */
+.card-img-top {
+  height: 10vw;
+  object-fit: contain;
+  margin: auto;
+  padding-top: 10px;
+}
+
+.card {
+  margin: 10px 0;
+  transition: 0.3s;
+  width: 18rem;
+}
+
+.card:hover {
+  -webkit-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  transform: scale(0.9);
+}
+
 /* footer */
 /* footer background color */
 .page-footer {
