--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap&family=Raleway:wght@500&display=swap');
 
 /* Page styles - universal */
 h1 {
@@ -16,6 +16,12 @@ h1 {
 
 .div3 {
     background-color: grey;
+}
+
+/* navbar */
+.nav-text {
+    font-family: "Raleway", sans-serif;
+    font-weight: 600;
 }
 
 /* Images displayed in cards on the home [calculator] page */
