--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,12 +46,6 @@ h1 {
   width: 18rem;
 }
 
-/*.card:hover {
-  -webkit-transform: scale(0.9);
-  -ms-transform: scale(0.9);
-  transform: scale(0.9);
-}*/
-
 .card-padding {
     padding-bottom: 15px;
 }
@@ -69,6 +63,10 @@ input[type=number] {
 
 .form-padding {
     padding-top: 57px;
+}
+
+.form-padding-2 {
+    padding-top: 75px;
 }
 
 /* footer */
