--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,23 +39,18 @@ h2 {
 /* Images displayed in cards on the home [calculator] page */
 .card-img-top {
   max-height: 150px;
-  max-width: 150px;
+  max-width: 100%;
   object-fit: contain;
   margin: auto;
   padding-top: 10px;
 }
 
-.car-image {
-  max-height: 200px;
-  object-fit: contain;
-  margin-bottom: -51px;
-  padding-top: 10px;
-}
-
 .card {
-  margin: 10px 0;
-  transition: 0.3s;
+  margin: 0 auto;
+  float: none; 
+  margin-bottom: 10px; 
   width: 18rem;
+  height: 26rem;
 }
 
 .card-padding {
