--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ h2 {
 }
 
 .div3 {
-    background-color: grey;
+    background-color: #6699cc;
 }
 
 /* navbar */
@@ -47,12 +47,14 @@ h2 {
 
 .card {
   margin: 0 auto;
-  float: none; 
-  margin-bottom: 10px; 
+  float: none;
+  margin-top: 5px; 
+  margin-bottom: 5px; 
   width: 18rem;
   height: 26rem;
 }
 
+/* separates the bottom of the card section from the button section */
 .card-padding {
     padding-bottom: 15px;
 }
@@ -66,14 +68,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 input[type=number] {
     -moz-appearance:textfield;
-}
-
-.form-padding {
-    padding-top: 57px;
-}
-
-.form-padding-2 {
-    padding-top: 75px;
 }
 
 /* modal for calculation */
