--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap&family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap&family=Raleway:wght@500&display=swap&family=Ubuntu&display=swap');
 
 /* Page styles - universal */
 h1 {
-    font-family: "Rubik", sans-serif;
     text-align: center;
 }
 
-h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Rubik", sans-serif;
-    
+  }
+
+p {
+    font-family: "Ubuntu", sans-serif;
 }
 
 .div1 {
@@ -30,6 +32,9 @@ h2 {
 }
 
 /* sections */
+.head-text {
+    font-size: 1.1rem;
+}
 
 .btn--padding {
     margin-top: 12px;
