--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,10 @@ p {
     padding-bottom: 15px;
 }
 
+.heading-center {
+    text-align: center;
+}
+
 /* remove spinners from number inputs https://www.codexworld.com/how-to/remove-arrows-spinner-from-number-input-css/ */
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
