--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,11 @@ input[type=number] {
     display: none;
 }
 
+.fb--button {
+    background-color: #3b5998 !important;
+    color: #fff !important;
+}
+
 /* footer */
 /* footer background color */
 .page-footer {
