--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,13 @@ p {
     font-weight: 600;
 }
 
+.dropdown--background {
+     background: #17a2b8;
+     border-top: none;
+     box-shadow: none;
+     margin-top: 0.45rem;     
+}
+
 /* sections */
 .head-text {
     font-size: 1.1rem;
@@ -112,7 +119,7 @@ input[type=number] {
 #card-help-intersection,
 #card-help-length,
 #card-help-final {
-   height: 96.9%;
+   height: 96.3%;
 }
 
 #card-help-text-velocity, 
@@ -181,6 +188,36 @@ input[type=number] {
 .fb--button {
     background-color: #3b5998 !important;
     color: #fff !important;
+}
+
+/* Instructions Page */
+.icon-center {
+    text-align: center;
+    padding-top: 3rem;
+}
+
+.help-images {
+    padding: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border: 5px solid #17a2b8;
+}
+
+#card-help-map-1,
+#card-help-map-2,
+#card-help-map-3,
+#card-help-map-4 {
+    height: 90px;
+    width: auto;
+}
+
+#card-help-map-large-1,
+#card-help-map-large-2,
+#card-help-map-large-3,
+#card-help-map-large-4 {
+    height: auto;
+    width: auto;
 }
 
 /* footer */
