--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,13 +32,6 @@ p {
     font-weight: 600;
 }
 
-.dropdown--background {
-     background: #17a2b8;
-     border-top: none;
-     box-shadow: none;
-     margin-top: 0.45rem;     
-}
-
 /* sections */
 .head-text {
     font-size: 1.1rem;
@@ -98,13 +91,13 @@ input[type=number] {
 
 /* when icons are displayed in the modal */
 .dz-icon {
-    color: red;
+    color: #FF0000;
     font-size: 22px;
     margin-left: auto;
 }
 
 .oz-icon {
-    color: blue;
+    color: #0000ff;
     font-size: 22px;
     margin-left: auto;
 }
@@ -165,9 +158,9 @@ input[type=number] {
 
 .reaction_time_text {
     font-size: 1.8rem;
-    color: blue;
+    color: #0000ff;
     text-align: center;
-    border: 5px solid yellow;
+    border: 5px solid #FFFF00;
 }
 
 .best_score_text {
@@ -236,7 +229,9 @@ input[type=number] {
 .tw-icon,
 .li-icon,
 .ins-icon,
-.pin-icon {
+.pin-icon,
+.info-icon,
+.map-icon {
     outline: none;  
 }
 
