Added Google Map functionality to the test yourself page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,6 +183,13 @@ input[type=number] {
     color: #fff !important;
 }
 
+/* Test Yourself Page */
+#map_one {
+        height: 400px;  
+        width: 100%;  
+       }
+
+
 /* Instructions Page */
 .icon-center {
     text-align: center;
