Added multiple map functionality and added second map for testing purposes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,8 @@ input[type=number] {
 }
 
 /* Test Yourself Page */
-#map_one {
+#map_one,
+#map_two {
         height: 400px;  
         width: 100%;  
        }
