--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,22 +211,20 @@ input[type=number] {
     width: auto;
 }
 
-/* -- REMOVE THIS CODE --*/
-/* Instructions Page */
 .icon-center {
     text-align: center;
     padding-top: 3rem;
 }
 
-.help-images {
-    padding: 3%;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    border: 5px solid #17a2b8;
+.background-ul {
+    background-color: #e6d8ad;
+    border: none;    
 }
-/* -- REMOVE FROM ABOVE THIS LINE -- */
 
+.help--button {
+    width: 150px;
+    height: auto;
+}
 
 /* footer */
 /* footer background color */
