--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700;900&display=swap&family=Raleway:wght@500&display=swap&family=Ubuntu&display=swap');
 
 /* Page styles - universal */
-
 h1 {
     text-align: center;
 }
@@ -24,7 +23,7 @@ p {
 
 .div3 {
     background-color: #6699cc;
-}
+    }
 
 /* navbar */
 .nav-text {
@@ -58,6 +57,26 @@ p {
   margin-bottom: 5px; 
   width: 18rem;
   height: 23.7rem;
+}
+
+.heading-background {
+   background-color: #f8f8ff;
+   opacity: 0.95;
+   border-radius: 8px;
+}
+
+.heading-padding {
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+.heading-margin { 
+    margin-top: 6px;
+    margin-bottom: 6px;
+}
+
+.card--extra-wide {
+    width: 90%;
+    height: 90%;
 }
 
 /* separates the bottom of the card section from the button section */
@@ -217,7 +236,7 @@ input[type=number] {
 }
 
 .background-ul {
-    background-color: #e6d8ad;
+    background-color: #f8f8ff;
     border: none;    
 }
 
