--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@ h6 {
   margin-bottom: 6px;
 }
 
+.heading-margin-test-yourself {
+  margin-top: 6px;
+  margin-bottom: 3px;
+}
+
 .heading-margin-top {
   margin-top: 6px;
 }
@@ -261,7 +266,7 @@ input[type=number] {
 #card-map-large-3,
 #card-map-large-4,
 #card-map-large-5 {
-  height: auto;
+  height: 96.5%;
   width: auto;
 }
 
