--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,6 @@ h6 {
   margin-bottom: 6px;
 }
 
-.heading-margin-test-yourself {
-  margin-top: 6px;
-  margin-bottom: 3px;
-}
-
 .heading-margin-top {
   margin-top: 6px;
 }
@@ -328,4 +323,8 @@ input[type=number] {
 /* $spacer amount */
 .mt-7 {
   margin-top: 7rem !important;
+}
+
+.mb--1 {
+  margin-bottom: -0.7rem;
 }
