--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,6 @@ p {
 
 .rightside-navigation-text {
     color: #333 !important;
-    
 }
 
 /* sections */
@@ -100,7 +99,18 @@ p {
   text-decoration: underline;
 }
 
-/* Images displayed in cards on the home [calculator] page */
+/* Image on index.html */
+.author-img {
+    border-radius: 50%;
+    width: 15% !important;
+    height: auto !important;
+    vertical-align: middle;
+    border-style: solid;
+    border-color: #85144b;
+    border-width: 4px;
+}
+
+/* Images displayed in cards on the calculator page */
 .card-img-top {
   max-height: 150px;
   max-width: 100%;
