--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,13 @@ p {
     border-width: 4px;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .dropdown--color {
     background-color: #ff5733;
     color: #fffdd9;
@@ -214,12 +221,6 @@ input[type=number] {
 #card-help-text-final-small {
   height: auto;
   width: auto;
-}
-
-@media only screen and (max-width: 768px) {
-    p .visibilitySmall {
-      visibility: hidden;
-    }
 }
 
 /* Reaction Time Game */
