--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,6 +337,11 @@ input[type=number] {
   background-color: #0074d9;
 }
 
+.no-click-span {
+    pointer-events: none !important;
+    opacity: 0.6;
+}
+
 /* footer */
 /* footer background color */
 .page-footer {
