--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,8 +95,8 @@ p {
         flex-direction: row;
     }
     .navbar-expand-custom .navbar-nav .nav-link {
-        padding-right: .5rem;
-        padding-left: .5rem;
+        padding-right: 8px;
+        padding-left: 8px;
     }
     .navbar-expand-custom .navbar-collapse {
         display: flex!important;
@@ -108,7 +108,7 @@ p {
 
 /* sections */
 .head-text {
-  font-size: 1.1rem;
+  font-size: 17.6px;
 }
 
 .btn--padding {
@@ -167,8 +167,8 @@ p {
   float: none;
   margin-top: 5px;
   margin-bottom: 5px;
-  width: 18rem;
-  height: 23.7rem;
+  width: 288px;
+  height: 379.px;
 }
 
 .card--extra-wide {
@@ -274,14 +274,14 @@ input[type=number] {
 }
 
 .reaction_time_text {
-  font-size: 1.8rem;
+  font-size: 28.8px;
   color: #0000ff;
   text-align: center;
   border: 5px solid #ffff00;
 }
 
 .best_score_text {
-  font-size: 1.4rem;
+  font-size: 22.4px;
   color: #36454f;
   text-align: center;
 }
@@ -335,12 +335,12 @@ input[type=number] {
 }
 
 .fa2x {
-    font-size: 1.1rem;
+    font-size: 17.6px;
 }
 
 .icon-center {
   text-align: center;
-  padding-top: 3rem;
+  padding-top: 48px;
 }
 
 /* location of the desktop, android and apple help buttons */
@@ -396,9 +396,9 @@ input[type=number] {
 
 /* $spacer amount */
 .mt-7 {
-  margin-top: 7rem !important;
+  margin-top: 112px !important;
 }
 
 .mb--1 {
-  margin-bottom: -0.7rem;
+  margin-bottom: -11.2px;
 }
