--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ p {
   background-color: #b6d5eb;
 }
 
-/* rounded button edges and colors */
+/* rounded button edges and standardised colors */
 .btn-rounded {
   border-radius: 25px;
 }
@@ -85,6 +85,7 @@ p {
     color: #333 !important;
 }
 
+/* Due to the extra size of the navigation text on the right hand side of the navbar this CSS avoids text wrapping */
 @media (min-width: 1100px){
     .navbar-expand-custom {
         flex-direction: row;
@@ -106,7 +107,7 @@ p {
     }
 }
 
-/* sections */
+/* sections - universal */
 .head-text {
   font-size: 17.6px;
 }
@@ -120,7 +121,7 @@ p {
   text-decoration: underline;
 }
 
-/* Image on index.html */
+/* Author image on index.html */
 .author-img {
     border-radius: 50%;
     width: 15% !important;
@@ -153,6 +154,7 @@ p {
     border-color: #85144b; 
 }
 
+/* Calculator Page */
 /* Images displayed in cards on the calculator page */
 .card-img-top {
   max-height: 150px;
@@ -168,7 +170,7 @@ p {
   margin-top: 5px;
   margin-bottom: 5px;
   width: 288px;
-  height: 379.px;
+  height: 379px;
 }
 
 .card--extra-wide {
@@ -185,17 +187,6 @@ p {
   text-align: center;
 }
 
-/* remove spinners from number inputs https://www.codexworld.com/how-to/remove-arrows-spinner-from-number-input-css/ */
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
 /* modal for calculation */
 .icon_hide_dilemmazone {
   display: none;
@@ -209,14 +200,12 @@ input[type=number] {
 .dz-icon {
   color: #ff0000;
   font-size: 22px;
-  
-}
+ }
 
 .oz-icon {
   color: #0000ff;
   font-size: 22px;
-  margin-left: auto;
-}
+ }
 
 /* Help Page */
 /* Set card heights */
@@ -242,6 +231,11 @@ input[type=number] {
 #card-help-text-final2 {
   height: auto;
   width: auto;
+}
+
+.warning_box {
+    border: solid 2.25px #ff0000;
+    box-shadow: 1px 1px 4px 2px rgba(255,0,0,0.34); 
 }
 
 /* Reaction Time Game */
@@ -399,7 +393,7 @@ input[type=number] {
   text-align: center;
 }
 
-/* $spacer amount */
+/* $spacer amount extras not Bootstrap standard */
 .mt-7 {
   margin-top: 112px !important;
 }
