--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,21 @@ p {
   height: auto;
 }
 
+/* Number input validation errors */
+input[type="number"] + div {
+    display: none;
+}
+input[type="number"]:valid {
+    background-color: #fbfaf5;
+}
+input[type="number"]:invalid {
+    background-color: #EAC6C6;
+}
+input[type="number"]:invalid + div {
+    display: block;
+    color: #C66464; 
+}
+
 /* navbar */
 .nav-text {
   font-family: "Raleway", sans-serif;
@@ -83,6 +98,18 @@ p {
 
 .rightside-navigation-text {
     color: #333 !important;
+}
+
+/* Remove number input spinners Chrome, Safari, Edge, Opera - source https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove number input spinners Firefox - source https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 /* Due to the extra size of the navigation text on the right hand side of the navbar this CSS avoids text wrapping */
@@ -200,11 +227,21 @@ p {
 .dz-icon {
   color: #ff0000;
   font-size: 22px;
+  position: absolute;
+  right: 7%;
+  top: 2%;
+  margin: 0;
+  line-height: 1.5;
  }
 
 .oz-icon {
   color: #0000ff;
   font-size: 22px;
+  position: absolute;
+  right: 7%;
+  top: 2%;
+  margin: 0;
+  line-height: 1.5;
  }
 
 /* Help Page */
